2008-12-11  Juanma Barranquero  <lekktu@gmail.com>

	* w32proc.c (Fw32_get_locale_info): Decode long form of locale name.

2008-12-11  Juanma Barranquero  <lekktu@gmail.com>

	* process.c (Fsystem_process_attributes, syms_of_process):
	Fix typo in name of Ssystem_process_attributes.
	Reported by Ulrich Mueller <ulm@kph.uni-mainz.de>.

2008-12-11  Juanma Barranquero  <lekktu@gmail.com>

	* syntax.c (Fmodify_syntax_entry): Doc fix.

2008-12-10  Juanma Barranquero  <lekktu@gmail.com>

	* font.c (Ffont_spec): Move usage to end of docstring.

2008-12-10  Jason Rumney  <jasonr@gnu.org>

	* w32font.c (Qcham): New symbol.
	(font_supported_scripts): Add cham, and comments for other new
	scripts in bitfield from OpenType spec.
	(add_font_entity_to_list): Limit unicode-sip fonts to those that
	contain characters beyond the bmp.

2008-12-10  Kenichi Handa  <handa@m17n.org>

	* ftfont.c (fc_charset_table): Add "unicode-sip".
	(ftfont_spec_pattern): Lookup fc_charset_table for the registry
	Qunicode_sip.

2008-12-10  Juanma Barranquero  <lekktu@gmail.com>

	* coding.c (QCdefault_char): Rename from QCdefalut_char.
	(Fcoding_system_put): Use QCdefault_char.
	(syms_of_coding): Set QCdefault_char, not QCdefalut_char.

2008-12-09  Chong Yidong  <cyd@stupidchicken.com>

	* xftfont.c (syms_of_xftfont): Fix typo.

	* buffer.c (Fbuffer_swap_text): Signal error if swapping a dead buffer.

2008-12-08  Dan Nicolaescu  <dann@ics.uci.edu>

	* emacs.c (main): Close daemon_pipe on exec.

2008-12-08  Chong Yidong  <cyd@stupidchicken.com>

	* termchar.h (struct tty): New members termcap_term_buffer and
	termcap_strings_buffer.

	* term.c (encode_terminal_code): Free any previous memory blocks
	before calling xmalloc for encode_terminal_src or encode_terminal_dst.
	(maybe_fatal): Buffer argument deleted.  Don't free buffer here.
	All callers changed.
	(init_tty): Store termcap data and string buffers in new struct
	tty members termcap_term_buffer and termcap_strings_buffer.